# cycling-overlay

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/activity/: Cargo.toml
crates/activity/src/: fit_parse.rs  geo.rs  gpx_parse.rs  interp.rs  lib.rs  metric.rs  sample.rs  smooth.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  ffmpeg.rs  main.rs  pipeline.rs  run.rs
crates/cli/tests/: dry_run.rs  end_to_end.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs  validate.rs
crates/render/: Cargo.toml
crates/render/assets/: Roboto-OFL.txt
crates/render/src/: frame.rs  lib.rs  text.rs
crates/render/src/widgets/: bar.rs  course.rs  elevation_profile.rs  gauge.rs  meter.rs  mod.rs  readout.rs  scale.rs
crates/render/tests/: golden.rs
docs/: layouts.md
examples/: layout-cycling.json
gui/: .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: binary.rs  export.rs  main.rs  preview.rs  progress.rs  session.rs  state.rs  watcher.rs
gui/src/components/: CodecSelect.svelte  ExportFooter.svelte  PreviewPane.svelte  Seekbar.svelte  Sidebar.svelte  StartupBanner.svelte
gui/src/lib/: preview-dispatcher.test.ts  runtime-stores.ts  stores.ts  tauri.ts  time.test.ts  time.ts  types.ts
