[package]
name = "gpx-overlay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gpx-overlay"
path = "src/main.rs"

[dependencies]
activity = { path = "../activity" }
layout = { path = "../layout" }
render = { path = "../render" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
anyhow.workspace = true
num_cpus = "1"

[features]
ffmpeg-tests = []
