[package]
name = "render"
version.workspace = true
edition.workspace = true

[dependencies]
activity = { path = "../activity" }
layout = { path = "../layout" }
tiny-skia = "0.11"
cosmic-text = "0.12"
anyhow.workspace = true

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
chrono.workspace = true
